--- a/ui5.yaml
+++ b/ui5.yaml
@@ -11,8 +11,9 @@ server:
       configuration:
         ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
         backend:
-        - path: /V2 # /sap/opu/odata # Sistemas onPremise
-          url: http://northwind.dest # http://localhost # Sistemas onPremise
+        - path: /V3 # /sap/opu/odata # Sistemas onPremise
+          url: https://services.odata.org # http://localhost # Sistemas onPremise
+          destination: Northwind
         ui5:
           path:
             - /resources
